# claude-code-portal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  PROXY_AUTH.md  README.md  TEST.md  TEST_UPDATED.md  TROUBLESHOOTING.md  docker-compose.test.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: fix_migration_names.sql
backend/migrations/00000000000000_initial_setup/: down.sql  up.sql
backend/migrations/2026-01-10-211719-0000_add_user_id_to_messages/: down.sql  up.sql
backend/migrations/2026-01-14-160836_add_admin_fields_to_users/: down.sql  up.sql
backend/migrations/2026-01-14-221102_add_cost_tracking/: down.sql  up.sql
backend/migrations/2026-01-15-184305_add_deleted_session_costs/: down.sql  up.sql
backend/migrations/2026-01-15-191412_add_token_tracking/: down.sql  up.sql
backend/migrations/2026-01-16-203452_add_voice_enabled_to_users/: down.sql  up.sql
backend/migrations/2026-01-16-210151-0000_add_pending_permission_requests/: down.sql  up.sql
backend/migrations/2026-01-17-030335_add_performance_indices/: down.sql  up.sql
backend/migrations/2026-01-17-233608_add_session_members/: down.sql  up.sql
backend/migrations/2026-01-18-023257_add_ban_reason/: down.sql
backend/migrations/2026-01-18-045007_make_working_directory_not_null/: down.sql  up.sql
backend/migrations/2026-01-18-045238_add_client_version_to_sessions/: down.sql  up.sql
backend/migrations/2026-01-18-205949_add_content_hash_to_raw_messages/: down.sql  up.sql
backend/migrations/2026-01-18-221922_add_messages_created_at_index/: down.sql  up.sql
backend/migrations/2026-01-20-231629_add_pending_inputs_table/: down.sql  up.sql
backend/migrations/2026-02-16-171025_add_hostname_and_launcher_id/: down.sql  up.sql
backend/migrations/2026-02-18-222738_add_pr_url/: down.sql  up.sql
backend/migrations/2026-02-19-180649_add_sound_config_to_users/: down.sql  up.sql
backend/migrations/2026-02-21-204646_add_agent_type_to_sessions/: down.sql  up.sql
backend/migrations/2026-02-27-221207_add_repo_url_to_sessions/: down.sql  up.sql
backend/migrations/2026-03-10-200000_drop_raw_message_log/: down.sql  up.sql
backend/migrations/2026-03-10-210000_add_scheduled_tasks/: down.sql  up.sql
backend/migrations/2026-03-11-180000_scheduled_tasks_cleanup/: down.sql  up.sql
backend/migrations/20260109000000_add_proxy_auth_tokens/: down.sql  up.sql
backend/src/: db.rs  embedded_assets.rs  jwt.rs  main.rs  models.rs  schema.rs  speech.rs
backend/src/handlers/: admin.rs  auth.rs  config.rs  device_flow.rs  downloads.rs  helpers.rs  launchers.rs  messages.rs  mod.rs  proxy_tokens.rs  retention.rs  scheduled_tasks.rs  sessions.rs  sound_settings.rs  upload.rs  voice.rs  websocket.rs
backend/src/handlers/websocket/: auth.rs  launcher_socket.rs  message_handlers.rs  mod.rs  permissions.rs  proxy_socket.rs  registration.rs  session_manager.rs  web_client_socket.rs
claude-session-lib/: Cargo.toml
claude-session-lib/src/: error.rs  heartbeat.rs  lib.rs  output_buffer.rs  proxy_session.rs  session.rs  snapshot.rs
claude-session-lib/src/proxy_session/: mod.rs  output_forwarder.rs  wiggum.rs  ws_reader.rs
cli-tools/: Cargo.toml
cli-tools/src/: client.rs  main.rs
docs/: AUTH_FLOWS.md  CODEX_SUPPORT.md  DATABASE.md  DEPLOYING.md  DEVELOPING.md  DOCKER.md  FILE_UPLOAD_SPEC.md  INSTALL_FLOW.md  LAUNCHER_PLAN.md  LAUNCHER_ROADMAP.md  LOCAL_DEVELOPMENT.md  PORTAL_SETUP.md  PROTOCOL.md  PROXY_AUTH.md  PROXY_LIBRARY_EXTRACTION.md  SCHEDULED_TASKS.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  VOICE_INPUT_IMPLEMENTATION.md  VSCODE_SETUP.md  WIDGET_PROTOCOL.md  proxy-internals.md  proxy-login-flow.md
frontend/: Cargo.toml  Trunk.toml  index.html  pcm-processor.js  styles.css
frontend/lint/: .stylelintrc.json  package.json
frontend/src/: audio.rs  lib.rs  utils.rs
frontend/src/components/: codex_renderer.rs  copy_command.rs  cron_describe.rs  diff.rs  expandable.rs  launch_dialog.rs  markdown.rs  message_renderer.rs  mod.rs  proxy_token_setup.rs  schedule_dialog.rs  share_dialog.rs  voice_input.rs
frontend/src/components/message_renderer/: mod.rs  renderers.rs  types.rs
frontend/src/components/tool_renderers/: bash.rs  edit.rs  interactive.rs  mod.rs  search.rs  task.rs
frontend/src/hooks/: mod.rs  use_client_websocket.rs  use_keyboard_nav.rs  use_local_storage.rs  use_sessions.rs
frontend/src/pages/: access_denied.rs  admin.rs  banned.rs  dashboard.rs  mod.rs  settings.rs  splash.rs  terminal.rs
frontend/src/pages/admin/: mod.rs  overview_tab.rs  raw_messages_tab.rs  sessions_tab.rs  users_tab.rs
frontend/src/pages/dashboard/: mod.rs  page.rs  permission_dialog.rs  session_rail.rs  session_view.rs  types.rs
frontend/src/pages/dashboard/session_view/: component.rs  history.rs  mod.rs  types.rs  websocket.rs
frontend/src/pages/settings/: launchers_panel.rs  mod.rs  sessions_panel.rs  sounds_panel.rs  tasks_panel.rs  tokens_panel.rs
frontend/styles/: admin.css  banned.css  base.css  components.css  dashboard.css  keyboard.css  markdown.css  messages.css  permissions.css  schedule-dialog.css  session-cards.css  session-input.css  session-layout.css  session-mobile.css  session-rail.css  session-terminal.css  session-view.css  settings.css  share-dialog.css  splash.css  tasks-sidebar.css  tools.css
launcher/: Cargo.toml  install.sh
launcher/service/: claude-portal-launcher.service  com.claude-portal.launcher.plist
launcher/src/: config.rs  connection.rs  main.rs  pastebin.rs  process_manager.rs  service.rs
portal-auth/: Cargo.toml
portal-auth/src/: lib.rs
portal-update/: Cargo.toml
portal-update/src/: lib.rs
proxy/: Cargo.toml
proxy-session/: Cargo.toml
proxy-session/src/: lib.rs  session.rs
proxy/src/: auth.rs  commands.rs  config.rs  main.rs  output_buffer.rs  session.rs  shim.rs  ui.rs  update.rs  util.rs
scripts/: README.md  clean.sh  db-shell.sh  dev.sh  install-deps.sh  up.sh  (+3 more)
shared/: Cargo.toml
shared/src/: api.rs  endpoints.rs  lib.rs  protocol.rs  proxy_tokens.rs
(+4 files in other folders)
