[workspace]
members = ["shared", "backend", "frontend", "proxy", "cli-tools", "claude-session-lib", "launcher", "portal-auth", "proxy-session"]
resolver = "2"

[workspace.package]
version = "1.1.2"
edition = "2021"
authors = ["Matthew Goodman <d3a6d0cec0c16f3e@inboxnegative.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth
oauth2 = "4.4"

# Environment and config
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Claude Code integration
claude-codes = "2.1.17"

# Frontend (Yew)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo = "0.11"
gloo-net = "0.6"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
