[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Shared types
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database - using diesel with postgres
diesel = { workspace = true }
diesel_migrations = "2.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OAuth for Google authentication
oauth2 = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Claude Code integration
claude-codes = { workspace = true }

# Time
chrono = { workspace = true, features = ["std", "clock"] }

# UUID
uuid = { workspace = true }


# Secure random for session keys
rand = "0.8"

# JWT for proxy token authentication
jsonwebtoken = "9.3"

# SHA256 for token hashing
sha2 = "0.10"
hex = "0.4"

# WebSocket support
futures-util = "0.3"

# Shared state
dashmap = "6.1"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }
tower-cookies = { version = "0.11", features = ["signed"] }
bigdecimal = "0.4.10"
google-cognitive-apis = { version = "0.2.2", features = ["speech-to-text"] }
rust-embed = { version = "8.11.0", features = ["axum", "mime-guess"] }
mime_guess = "2.0.5"
brotli = "8.0"
flate2 = "1.0"
ws-bridge = { workspace = true, features = ["server"] }
tower_governor = "0.8.0"
governor = "0.8"
