[package]
name = "claude-session-lib"
version = "0.1.0"
edition = "2021"
description = "Library for managing Claude Code sessions"
license = "MIT"

[dependencies]
claude-codes = "2.1.17"
tokio = { version = "1", features = ["sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
