[package]
name = "cli-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI tools for testing and interacting with Claude Code Portal API"

[[bin]]
name = "portal-api"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Pretty output
colored = "2"
tabled = "0.15"
