[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types
shared = { path = "../shared" }

# Yew framework
yew = { workspace = true }
yew-router = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Web APIs
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "HtmlElement",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
] }

# Utility libraries for WASM
gloo = { workspace = true }
gloo-net = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging in WASM
wasm-logger = "0.2"
log = "0.4"

# Async utilities for WASM
futures-util = "0.3"
uuid = { workspace = true, features = ["v4", "serde", "js"] }
js-sys = "0.3.83"
