[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types
shared = { path = "../shared" }

# Yew framework
yew = { workspace = true }
yew-router = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Web APIs
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlSelectElement",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
    # Audio APIs for voice input + ADSR synthesis
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioDestinationNode",
    "AudioParam",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "MessageEvent",
    "MessagePort",
    "KeyboardEvent",
] }

# Utility libraries for WASM
gloo = { workspace = true }
gloo-net = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging in WASM
wasm-logger = "0.2"
log = "0.4"

# Async utilities for WASM
futures-util = "0.3"
futures-channel = "0.3"
uuid = { workspace = true, features = ["v4", "serde", "js"] }
js-sys = "0.3.83"
pulldown-cmark = { version = "0.13.0", default-features = false }
ws-bridge = { workspace = true, features = ["yew-client"] }
