[package]
name = "claude-portal-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "claude-portal-launcher"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Hostname
hostname = "0.4"

# Time
chrono = { workspace = true, features = ["std", "clock"] }
toml = "1.0.1"
dirs = "6.0.0"
portal-auth = { version = "0.1.0", path = "../portal-auth" }
claude-session-lib = { version = "0.1.0", path = "../claude-session-lib" }
ws-bridge = { workspace = true, features = ["native-client"] }
portal-update = { path = "../portal-update" }
