[package]
name = "agent-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "agent-portal"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Hostname
hostname = "0.4"

# Time
chrono = { workspace = true, features = ["std", "clock"] }
chrono-tz = "0.10"

# Cron expression parsing
croner = "3"
toml = "1.0.1"
dirs = "6.0.0"
portal-auth = { path = "../portal-auth" }
claude-session-lib = { path = "../claude-session-lib" }
ws-bridge = { workspace = true, features = ["native-client"] }
portal-update = { path = "../portal-update" }
reqwest = { version = "0.12", features = ["json"] }
tokio-util.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
directories = "5.0"
serde_json.workspace = true
