[package]
name = "portal-auth"
version = "0.1.0"
edition = "2021"
description = "Device flow authentication for Claude Portal"

[dependencies]
anyhow = { version = "1" }
colored = "2.1"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
