[package]
name = "portal-update"
version = "0.1.0"
edition = "2021"
description = "Self-update functionality for Claude Portal binaries"

[dependencies]
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tracing = "0.1"
