[package]
name = "claude-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "claude-portal"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Claude Code integration
claude-codes = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Environment variables
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Hostname
hostname = "0.4"

# URL parsing
url = "2.5"

# Config file management
directories = "5.0"

# Terminal colors
colored = "2.1"

# Time
chrono = { workspace = true, features = ["std", "clock"] }

# Self-update
portal-update = { path = "../portal-update" }
claude-session-lib = { path = "../claude-session-lib" }
portal-auth = { path = "../portal-auth" }
base64 = "0.22"

# Unix system calls (for lock file process checking)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

