[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Serialization - must be WASM compatible
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Time - WASM compatible features only
chrono = { workspace = true, default-features = false, features = ["serde", "wasmbind"] }

# Claude Code types (WASM-compatible, no tokio)
claude-codes = { version = "2.1.17", default-features = false, features = ["types"] }
