[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Serialization - must be WASM compatible
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Time - WASM compatible features only
chrono = { workspace = true, default-features = false, features = ["serde", "wasmbind"] }

# Claude Code types (WASM-compatible, no tokio)
claude-codes = { version = "2.1.20", default-features = false, features = ["types"] }

# Codex CLI types (WASM-compatible, types only)
codex-codes = { workspace = true }

# Typed WebSocket endpoints (core traits only — WASM-safe, no features needed)
ws-bridge = { workspace = true }
