[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Serialization - must be WASM compatible
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Claude Code types (WASM-compatible, no tokio)
claude-codes = { version = "2.1.117", default-features = false, features = ["types"] }

# Typed WebSocket endpoints (core traits only — WASM-safe, no features needed)
ws-bridge = { workspace = true }
